; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_load-tiff.c_tiff_seek_ifd.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_load-tiff.c_tiff_seek_ifd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tiff = type { i32*, i64, i64, i64 }

@FZ_ERROR_GENERIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"subimage index %i out of range\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"invalid IFD offset %u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.tiff*, i32)* @tiff_seek_ifd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tiff_seek_ifd(i32* %0, %struct.tiff* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.tiff*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.tiff* %1, %struct.tiff** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.tiff*, %struct.tiff** %5, align 8
  %9 = getelementptr inbounds %struct.tiff, %struct.tiff* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %7, align 4
  br label %13

13:                                               ; preds = %29, %3
  %14 = load i32, i32* %6, align 4
  %15 = add nsw i32 %14, -1
  store i32 %15, i32* %6, align 4
  %16 = icmp ne i32 %14, 0
  br i1 %16, label %17, label %30

17:                                               ; preds = %13
  %18 = load i32*, i32** %4, align 8
  %19 = load %struct.tiff*, %struct.tiff** %5, align 8
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @tiff_next_ifd(i32* %18, %struct.tiff* %19, i32 %20)
  store i32 %21, i32* %7, align 4
  %22 = load i32, i32* %7, align 4
  %23 = icmp eq i32 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %17
  %25 = load i32*, i32** %4, align 8
  %26 = load i32, i32* @FZ_ERROR_GENERIC, align 4
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @fz_throw(i32* %25, i32 %26, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %27)
  br label %29

29:                                               ; preds = %24, %17
  br label %13

30:                                               ; preds = %13
  %31 = load %struct.tiff*, %struct.tiff** %5, align 8
  %32 = getelementptr inbounds %struct.tiff, %struct.tiff* %31, i32 0, i32 2
  %33 = load i64, i64* %32, align 8
  %34 = load i32, i32* %7, align 4
  %35 = zext i32 %34 to i64
  %36 = add nsw i64 %33, %35
  %37 = load %struct.tiff*, %struct.tiff** %5, align 8
  %38 = getelementptr inbounds %struct.tiff, %struct.tiff* %37, i32 0, i32 1
  store i64 %36, i64* %38, align 8
  %39 = load %struct.tiff*, %struct.tiff** %5, align 8
  %40 = getelementptr inbounds %struct.tiff, %struct.tiff* %39, i32 0, i32 1
  %41 = load i64, i64* %40, align 8
  %42 = load %struct.tiff*, %struct.tiff** %5, align 8
  %43 = getelementptr inbounds %struct.tiff, %struct.tiff* %42, i32 0, i32 2
  %44 = load i64, i64* %43, align 8
  %45 = icmp slt i64 %41, %44
  br i1 %45, label %54, label %46

46:                                               ; preds = %30
  %47 = load %struct.tiff*, %struct.tiff** %5, align 8
  %48 = getelementptr inbounds %struct.tiff, %struct.tiff* %47, i32 0, i32 1
  %49 = load i64, i64* %48, align 8
  %50 = load %struct.tiff*, %struct.tiff** %5, align 8
  %51 = getelementptr inbounds %struct.tiff, %struct.tiff* %50, i32 0, i32 3
  %52 = load i64, i64* %51, align 8
  %53 = icmp sgt i64 %49, %52
  br i1 %53, label %54, label %59

54:                                               ; preds = %46, %30
  %55 = load i32*, i32** %4, align 8
  %56 = load i32, i32* @FZ_ERROR_GENERIC, align 4
  %57 = load i32, i32* %7, align 4
  %58 = call i32 @fz_throw(i32* %55, i32 %56, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32 %57)
  br label %59

59:                                               ; preds = %54, %46
  ret void
}

declare dso_local i32 @tiff_next_ifd(i32*, %struct.tiff*, i32) #1

declare dso_local i32 @fz_throw(i32*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
